--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -9,3 +9,8 @@
     background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.6), 10%, transparent);
     z-index: 1;
 }
+
+.navbar-left {
+    display: flex;
+    align-items: center;
+}
