add buttons style

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -27,3 +27,9 @@
     font-size: 17px;
     margin-bottom: 20px;
 }
+
+.hero-button {
+    display: flex;
+    gap: 10px;
+    margin-bottom: 50px;
+}
