--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -6,3 +6,24 @@
 .cards h2 {
     margin-bottom: 10px;
 }
+
+.card-list {
+    display: flex;
+    gap: 10px;
+}
+
+.card-list img {
+    width: 250px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.card-list .single-card {
+    position: relative;
+}
+
+.card-list .single-card p {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+}
