--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -13,6 +13,7 @@
     position: absolute;
     width: 100%;
     padding-left: 6%;
+    padding-right: 6%;
     bottom: 0;
 }
 
@@ -63,4 +64,9 @@
 
 .hero-button .btn:hover {
     background: #ffffffbf;
+}
+
+.more-cards {
+    padding-left: 6%;
+    padding-right: 6%;
 }
