--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -3,3 +3,14 @@
     max-width: 1000px;
     margin: 0 auto;
 }
+
+.footer-icons {
+    display: flex;
+    gap: 10px;
+    margin: 40px 0;
+}
+
+.footer-icons img {
+    width: 25px;
+    cursor: pointer;
+}
