--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -3,3 +3,7 @@
     background-image: linear-gradient(#0000007e, #0000007e), url(/background_banner.jpg);
     padding: 20px 10%;
 }
+
+.login-logo {
+    width: 150px;
+}
