--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -16,3 +16,29 @@
     background: rgba(0,0,0,0.6);
     border-radius: 5px;
 }
+
+.form h2 {
+    font-size: 32px;
+    font-weight: 500;
+    margin-bottom: 30px;
+}
+
+.form input[type="text"],
+.form input[type="password"] {
+    width: 100%;
+    height: 50px;
+    padding: 10px;
+    margin: 10px 0;
+    border: 0;
+    border-radius: 5px;
+    outline: 0;
+    background: #333;
+    color: white;
+    font-size: 16px;
+    font-weight: 500;
+    transition: background 0.3s ease;
+    transition: color 0.3s ease;
+    transition: border-color 0.3s ease;
+    transition: box-shadow 0.3s ease;
+    box-shadow: none;
+}
