--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -55,3 +55,19 @@
     font-size: 16px;
     font-weight: 500;
 }
+
+.form button {
+    width: 100%;
+    height: 50px;
+    padding: 10px;
+    margin-top: 20px;
+    border: 0;
+    border-radius: 5px;
+    background: #e50914;
+    color: white;
+    font-size: 16px;
+    font-weight: 500;
+    cursor: pointer;
+    transition: background 0.3s ease;
+    transition: color 0.3s ease;
+}
