--- a/src/pages/Play/Play.css
+++ b/src/pages/Play/Play.css
@@ -18,3 +18,9 @@
     border-radius: 10px;
 }
 
+.player-info {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 90%;
+}
