--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -110,3 +110,15 @@
     font-weight: 500;
     font-size: 13px;
 }
+
+.login-spinner {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.login-spinner img {
+    width: 50px;
+}
